server/src/antlr4-tsplang/TspFastParser.js
// Generated from C:\Source\vscode-tsplang\server\grammar\TspFast.g4 by ANTLR 4.7.1
// jshint ignore: start
var antlr4 = require('antlr4/index');
var TspFastListener = require('./TspFastListener').TspFastListener;
var grammarFileName = "TspFast.g4";



var atn = new antlr4.atn.ATNDeserializer().deserialize(serializedATN);

var decisionsToDFA = atn.decisionToState.map( function(ds, index) { return new antlr4.dfa.DFA(ds, index); });

var sharedContextCache = new antlr4.PredictionContextCache();

var literalNames = [ null, "';'", "','", "'='", "'do'", "'end'", "'while'", 
                     "'repeat'", "'until'", "'if'", "'then'", "'elseif'", 
                     "'else'", "'return'", "'break'", "'for'", "'in'", "'function'", 
                     "'.'", "':'", "'('", "')'", "'['", "']'", "'{'", "'}'", 
                     "'or'", "'and'", "'<'", "'>'", "'<='", "'>='", "'~='", 
                     "'!='", "'=='", "'..'", "'+'", "'-'", "'*'", "'/'", 
                     "'&'", "'|'", "'^^'", "'<<'", "'>>'", "'not'", "'!'", 
                     "'^'", "'nil'", null, "'local'", "'...'" ];

var symbolicNames = [ null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, null, null, null, null, null, null, 
                      null, null, null, "NIL", "BOOLEAN", "LOCAL", "VARARG", 
                      "NAME", "NORMALSTRING", "CHARSTRING", "LONGSTRING", 
                      "INT", "HEX", "FLOAT", "LONGCOMMENT", "LINE_COMMENT", 
                      "WS", "SHEBANG" ];

var ruleNames =  [ "chunk", "statement", "value", "expression", "prefix", 
                   "suffix", "index", "variable", "functionCall", "args", 
                   "tableConstructor", "fieldList", "field", "operatorOr", 
                   "operatorAnd", "operatorComparison", "operatorStrcat", 
                   "operatorAddSub", "operatorMulDiv", "operatorBitwiseAnd", 
                   "operatorBitwiseOr", "operatorBitwiseXor", "operatorBitwiseShift", 
                   "operatorUnary", "operatorPower", "number", "string" ];

function TspFastParser (input) {
	antlr4.Parser.call(this, input);
    this._interp = new antlr4.atn.ParserATNSimulator(this, atn, decisionsToDFA, sharedContextCache);
    this.ruleNames = ruleNames;
    this.literalNames = literalNames;
    this.symbolicNames = symbolicNames;
    return this;
}

TspFastParser.prototype = Object.create(antlr4.Parser.prototype);
TspFastParser.prototype.constructor = TspFastParser;

Object.defineProperty(TspFastParser.prototype, "atn", {
	get : function() {
		return atn;
	}
});

TspFastParser.EOF = antlr4.Token.EOF;
TspFastParser.T__0 = 1;
TspFastParser.T__1 = 2;
TspFastParser.T__2 = 3;
TspFastParser.T__3 = 4;
TspFastParser.T__4 = 5;
TspFastParser.T__5 = 6;
TspFastParser.T__6 = 7;
TspFastParser.T__7 = 8;
TspFastParser.T__8 = 9;
TspFastParser.T__9 = 10;
TspFastParser.T__10 = 11;
TspFastParser.T__11 = 12;
TspFastParser.T__12 = 13;
TspFastParser.T__13 = 14;
TspFastParser.T__14 = 15;
TspFastParser.T__15 = 16;
TspFastParser.T__16 = 17;
TspFastParser.T__17 = 18;
TspFastParser.T__18 = 19;
TspFastParser.T__19 = 20;
TspFastParser.T__20 = 21;
TspFastParser.T__21 = 22;
TspFastParser.T__22 = 23;
TspFastParser.T__23 = 24;
TspFastParser.T__24 = 25;
TspFastParser.T__25 = 26;
TspFastParser.T__26 = 27;
TspFastParser.T__27 = 28;
TspFastParser.T__28 = 29;
TspFastParser.T__29 = 30;
TspFastParser.T__30 = 31;
TspFastParser.T__31 = 32;
TspFastParser.T__32 = 33;
TspFastParser.T__33 = 34;
TspFastParser.T__34 = 35;
TspFastParser.T__35 = 36;
TspFastParser.T__36 = 37;
TspFastParser.T__37 = 38;
TspFastParser.T__38 = 39;
TspFastParser.T__39 = 40;
TspFastParser.T__40 = 41;
TspFastParser.T__41 = 42;
TspFastParser.T__42 = 43;
TspFastParser.T__43 = 44;
TspFastParser.T__44 = 45;
TspFastParser.T__45 = 46;
TspFastParser.T__46 = 47;
TspFastParser.NIL = 48;
TspFastParser.BOOLEAN = 49;
TspFastParser.LOCAL = 50;
TspFastParser.VARARG = 51;
TspFastParser.NAME = 52;
TspFastParser.NORMALSTRING = 53;
TspFastParser.CHARSTRING = 54;
TspFastParser.LONGSTRING = 55;
TspFastParser.INT = 56;
TspFastParser.HEX = 57;
TspFastParser.FLOAT = 58;
TspFastParser.LONGCOMMENT = 59;
TspFastParser.LINE_COMMENT = 60;
TspFastParser.WS = 61;
TspFastParser.SHEBANG = 62;

TspFastParser.RULE_chunk = 0;
TspFastParser.RULE_statement = 1;
TspFastParser.RULE_value = 2;
TspFastParser.RULE_expression = 3;
TspFastParser.RULE_prefix = 4;
TspFastParser.RULE_suffix = 5;
TspFastParser.RULE_index = 6;
TspFastParser.RULE_variable = 7;
TspFastParser.RULE_functionCall = 8;
TspFastParser.RULE_args = 9;
TspFastParser.RULE_tableConstructor = 10;
TspFastParser.RULE_fieldList = 11;
TspFastParser.RULE_field = 12;
TspFastParser.RULE_operatorOr = 13;
TspFastParser.RULE_operatorAnd = 14;
TspFastParser.RULE_operatorComparison = 15;
TspFastParser.RULE_operatorStrcat = 16;
TspFastParser.RULE_operatorAddSub = 17;
TspFastParser.RULE_operatorMulDiv = 18;
TspFastParser.RULE_operatorBitwiseAnd = 19;
TspFastParser.RULE_operatorBitwiseOr = 20;
TspFastParser.RULE_operatorBitwiseXor = 21;
TspFastParser.RULE_operatorBitwiseShift = 22;
TspFastParser.RULE_operatorUnary = 23;
TspFastParser.RULE_operatorPower = 24;
TspFastParser.RULE_number = 25;
TspFastParser.RULE_string = 26;

function ChunkContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TspFastParser.RULE_chunk;
    return this;
}

ChunkContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
ChunkContext.prototype.constructor = ChunkContext;

ChunkContext.prototype.EOF = function() {
    return this.getToken(TspFastParser.EOF, 0);
};

ChunkContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

ChunkContext.prototype.enterRule = function(listener) {
    if(listener instanceof TspFastListener ) {
        listener.enterChunk(this);
	}
};

ChunkContext.prototype.exitRule = function(listener) {
    if(listener instanceof TspFastListener ) {
        listener.exitChunk(this);
	}
};




TspFastParser.ChunkContext = ChunkContext;

TspFastParser.prototype.chunk = function() {

    var localctx = new ChunkContext(this, this._ctx, this.state);
    this.enterRule(localctx, 0, TspFastParser.RULE_chunk);
    var _la = 0; // Token type
    try {
        this.enterOuterAlt(localctx, 1);
        this.state = 60;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << TspFastParser.T__3) | (1 << TspFastParser.T__5) | (1 << TspFastParser.T__6) | (1 << TspFastParser.T__8) | (1 << TspFastParser.T__12) | (1 << TspFastParser.T__13) | (1 << TspFastParser.T__14) | (1 << TspFastParser.T__16) | (1 << TspFastParser.T__19))) !== 0) || _la===TspFastParser.LOCAL || _la===TspFastParser.NAME) {
            this.state = 54;
            this.statement();
            this.state = 56;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===TspFastParser.T__0) {
                this.state = 55;
                this.match(TspFastParser.T__0);
            }

            this.state = 62;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
        }
        this.state = 63;
        this.match(TspFastParser.EOF);
    } catch (re) {
    	if(re instanceof antlr4.error.RecognitionException) {
	        localctx.exception = re;
	        this._errHandler.reportError(this, re);
	        this._errHandler.recover(this, re);
	    } else {
	    	throw re;
	    }
    } finally {
        this.exitRule();
    }
    return localctx;
};

function StatementContext(parser, parent, invokingState) {
	if(parent===undefined) {
	    parent = null;
	}
	if(invokingState===undefined || invokingState===null) {
		invokingState = -1;
	}
	antlr4.ParserRuleContext.call(this, parent, invokingState);
    this.parser = parser;
    this.ruleIndex = TspFastParser.RULE_statement;
    return this;
}

StatementContext.prototype = Object.create(antlr4.ParserRuleContext.prototype);
StatementContext.prototype.constructor = StatementContext;

StatementContext.prototype.variable = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(VariableContext);
    } else {
        return this.getTypedRuleContext(VariableContext,i);
    }
};

StatementContext.prototype.expression = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(ExpressionContext);
    } else {
        return this.getTypedRuleContext(ExpressionContext,i);
    }
};

StatementContext.prototype.functionCall = function() {
    return this.getTypedRuleContext(FunctionCallContext,0);
};

StatementContext.prototype.statement = function(i) {
    if(i===undefined) {
        i = null;
    }
    if(i===null) {
        return this.getTypedRuleContexts(StatementContext);
    } else {
        return this.getTypedRuleContext(StatementContext,i);
    }
};

StatementContext.prototype.NAME = function(i) {
	if(i===undefined) {
		i = null;
	}
    if(i===null) {
        return this.getTokens(TspFastParser.NAME);
    } else {
        return this.getToken(TspFastParser.NAME, i);
    }
};


StatementContext.prototype.VARARG = function() {
    return this.getToken(TspFastParser.VARARG, 0);
};

StatementContext.prototype.LOCAL = function() {
    return this.getToken(TspFastParser.LOCAL, 0);
};

StatementContext.prototype.enterRule = function(listener) {
    if(listener instanceof TspFastListener ) {
        listener.enterStatement(this);
	}
};

StatementContext.prototype.exitRule = function(listener) {
    if(listener instanceof TspFastListener ) {
        listener.exitStatement(this);
	}
};




TspFastParser.StatementContext = StatementContext;

TspFastParser.prototype.statement = function() {

    var localctx = new StatementContext(this, this._ctx, this.state);
    this.enterRule(localctx, 2, TspFastParser.RULE_statement);
    var _la = 0; // Token type
    try {
        this.state = 317;
        this._errHandler.sync(this);
        var la_ = this._interp.adaptivePredict(this._input,42,this._ctx);
        switch(la_) {
        case 1:
            this.enterOuterAlt(localctx, 1);
            this.state = 65;
            this.variable();
            this.state = 70;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===TspFastParser.T__1) {
                this.state = 66;
                this.match(TspFastParser.T__1);
                this.state = 67;
                this.variable();
                this.state = 72;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 73;
            this.match(TspFastParser.T__2);
            this.state = 74;
            this.expression();
            this.state = 79;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===TspFastParser.T__1) {
                this.state = 75;
                this.match(TspFastParser.T__1);
                this.state = 76;
                this.expression();
                this.state = 81;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            break;

        case 2:
            this.enterOuterAlt(localctx, 2);
            this.state = 82;
            this.functionCall();
            break;

        case 3:
            this.enterOuterAlt(localctx, 3);
            this.state = 83;
            this.match(TspFastParser.T__3);
            this.state = 90;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << TspFastParser.T__3) | (1 << TspFastParser.T__5) | (1 << TspFastParser.T__6) | (1 << TspFastParser.T__8) | (1 << TspFastParser.T__12) | (1 << TspFastParser.T__13) | (1 << TspFastParser.T__14) | (1 << TspFastParser.T__16) | (1 << TspFastParser.T__19))) !== 0) || _la===TspFastParser.LOCAL || _la===TspFastParser.NAME) {
                this.state = 84;
                this.statement();
                this.state = 86;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if(_la===TspFastParser.T__0) {
                    this.state = 85;
                    this.match(TspFastParser.T__0);
                }

                this.state = 92;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 93;
            this.match(TspFastParser.T__4);
            break;

        case 4:
            this.enterOuterAlt(localctx, 4);
            this.state = 94;
            this.match(TspFastParser.T__5);
            this.state = 95;
            this.expression();
            this.state = 96;
            this.match(TspFastParser.T__3);
            this.state = 103;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << TspFastParser.T__3) | (1 << TspFastParser.T__5) | (1 << TspFastParser.T__6) | (1 << TspFastParser.T__8) | (1 << TspFastParser.T__12) | (1 << TspFastParser.T__13) | (1 << TspFastParser.T__14) | (1 << TspFastParser.T__16) | (1 << TspFastParser.T__19))) !== 0) || _la===TspFastParser.LOCAL || _la===TspFastParser.NAME) {
                this.state = 97;
                this.statement();
                this.state = 99;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if(_la===TspFastParser.T__0) {
                    this.state = 98;
                    this.match(TspFastParser.T__0);
                }

                this.state = 105;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 106;
            this.match(TspFastParser.T__4);
            break;

        case 5:
            this.enterOuterAlt(localctx, 5);
            this.state = 108;
            this.match(TspFastParser.T__6);
            this.state = 115;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << TspFastParser.T__3) | (1 << TspFastParser.T__5) | (1 << TspFastParser.T__6) | (1 << TspFastParser.T__8) | (1 << TspFastParser.T__12) | (1 << TspFastParser.T__13) | (1 << TspFastParser.T__14) | (1 << TspFastParser.T__16) | (1 << TspFastParser.T__19))) !== 0) || _la===TspFastParser.LOCAL || _la===TspFastParser.NAME) {
                this.state = 109;
                this.statement();
                this.state = 111;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if(_la===TspFastParser.T__0) {
                    this.state = 110;
                    this.match(TspFastParser.T__0);
                }

                this.state = 117;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 118;
            this.match(TspFastParser.T__7);
            this.state = 119;
            this.expression();
            break;

        case 6:
            this.enterOuterAlt(localctx, 6);
            this.state = 120;
            this.match(TspFastParser.T__8);
            this.state = 121;
            this.expression();
            this.state = 122;
            this.match(TspFastParser.T__9);
            this.state = 129;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << TspFastParser.T__3) | (1 << TspFastParser.T__5) | (1 << TspFastParser.T__6) | (1 << TspFastParser.T__8) | (1 << TspFastParser.T__12) | (1 << TspFastParser.T__13) | (1 << TspFastParser.T__14) | (1 << TspFastParser.T__16) | (1 << TspFastParser.T__19))) !== 0) || _la===TspFastParser.LOCAL || _la===TspFastParser.NAME) {
                this.state = 123;
                this.statement();
                this.state = 125;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if(_la===TspFastParser.T__0) {
                    this.state = 124;
                    this.match(TspFastParser.T__0);
                }

                this.state = 131;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 146;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===TspFastParser.T__10) {
                this.state = 132;
                this.match(TspFastParser.T__10);
                this.state = 133;
                this.expression();
                this.state = 134;
                this.match(TspFastParser.T__9);
                this.state = 141;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << TspFastParser.T__3) | (1 << TspFastParser.T__5) | (1 << TspFastParser.T__6) | (1 << TspFastParser.T__8) | (1 << TspFastParser.T__12) | (1 << TspFastParser.T__13) | (1 << TspFastParser.T__14) | (1 << TspFastParser.T__16) | (1 << TspFastParser.T__19))) !== 0) || _la===TspFastParser.LOCAL || _la===TspFastParser.NAME) {
                    this.state = 135;
                    this.statement();
                    this.state = 137;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    if(_la===TspFastParser.T__0) {
                        this.state = 136;
                        this.match(TspFastParser.T__0);
                    }

                    this.state = 143;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
                this.state = 148;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 159;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===TspFastParser.T__11) {
                this.state = 149;
                this.match(TspFastParser.T__11);
                this.state = 156;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << TspFastParser.T__3) | (1 << TspFastParser.T__5) | (1 << TspFastParser.T__6) | (1 << TspFastParser.T__8) | (1 << TspFastParser.T__12) | (1 << TspFastParser.T__13) | (1 << TspFastParser.T__14) | (1 << TspFastParser.T__16) | (1 << TspFastParser.T__19))) !== 0) || _la===TspFastParser.LOCAL || _la===TspFastParser.NAME) {
                    this.state = 150;
                    this.statement();
                    this.state = 152;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                    if(_la===TspFastParser.T__0) {
                        this.state = 151;
                        this.match(TspFastParser.T__0);
                    }

                    this.state = 158;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }
            }

            this.state = 161;
            this.match(TspFastParser.T__4);
            break;

        case 7:
            this.enterOuterAlt(localctx, 7);
            this.state = 163;
            this.match(TspFastParser.T__12);
            this.state = 172;
            this._errHandler.sync(this);
            var la_ = this._interp.adaptivePredict(this._input,19,this._ctx);
            if(la_===1) {
                this.state = 164;
                this.expression();
                this.state = 169;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                while(_la===TspFastParser.T__1) {
                    this.state = 165;
                    this.match(TspFastParser.T__1);
                    this.state = 166;
                    this.expression();
                    this.state = 171;
                    this._errHandler.sync(this);
                    _la = this._input.LA(1);
                }

            }
            break;

        case 8:
            this.enterOuterAlt(localctx, 8);
            this.state = 174;
            this.match(TspFastParser.T__13);
            break;

        case 9:
            this.enterOuterAlt(localctx, 9);
            this.state = 175;
            this.match(TspFastParser.T__14);
            this.state = 176;
            this.match(TspFastParser.NAME);
            this.state = 177;
            this.match(TspFastParser.T__2);
            this.state = 178;
            this.expression();
            this.state = 179;
            this.match(TspFastParser.T__1);
            this.state = 180;
            this.expression();
            this.state = 183;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===TspFastParser.T__1) {
                this.state = 181;
                this.match(TspFastParser.T__1);
                this.state = 182;
                this.expression();
            }

            this.state = 185;
            this.match(TspFastParser.T__3);
            this.state = 192;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << TspFastParser.T__3) | (1 << TspFastParser.T__5) | (1 << TspFastParser.T__6) | (1 << TspFastParser.T__8) | (1 << TspFastParser.T__12) | (1 << TspFastParser.T__13) | (1 << TspFastParser.T__14) | (1 << TspFastParser.T__16) | (1 << TspFastParser.T__19))) !== 0) || _la===TspFastParser.LOCAL || _la===TspFastParser.NAME) {
                this.state = 186;
                this.statement();
                this.state = 188;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if(_la===TspFastParser.T__0) {
                    this.state = 187;
                    this.match(TspFastParser.T__0);
                }

                this.state = 194;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 195;
            this.match(TspFastParser.T__4);
            break;

        case 10:
            this.enterOuterAlt(localctx, 10);
            this.state = 197;
            this.match(TspFastParser.T__14);
            this.state = 198;
            this.match(TspFastParser.NAME);
            this.state = 203;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===TspFastParser.T__1) {
                this.state = 199;
                this.match(TspFastParser.T__1);
                this.state = 200;
                this.match(TspFastParser.NAME);
                this.state = 205;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 206;
            this.match(TspFastParser.T__15);
            this.state = 207;
            this.expression();
            this.state = 212;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===TspFastParser.T__1) {
                this.state = 208;
                this.match(TspFastParser.T__1);
                this.state = 209;
                this.expression();
                this.state = 214;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 215;
            this.match(TspFastParser.T__3);
            this.state = 222;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while((((_la) & ~0x1f) == 0 && ((1 << _la) & ((1 << TspFastParser.T__3) | (1 << TspFastParser.T__5) | (1 << TspFastParser.T__6) | (1 << TspFastParser.T__8) | (1 << TspFastParser.T__12) | (1 << TspFastParser.T__13) | (1 << TspFastParser.T__14) | (1 << TspFastParser.T__16) | (1 << TspFastParser.T__19))) !== 0) || _la===TspFastParser.LOCAL || _la===TspFastParser.NAME) {
                this.state = 216;
                this.statement();
                this.state = 218;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if(_la===TspFastParser.T__0) {
                    this.state = 217;
                    this.match(TspFastParser.T__0);
                }

                this.state = 224;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 225;
            this.match(TspFastParser.T__4);
            break;

        case 11:
            this.enterOuterAlt(localctx, 11);
            this.state = 227;
            this.match(TspFastParser.T__16);
            this.state = 228;
            this.match(TspFastParser.NAME);
            this.state = 233;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            while(_la===TspFastParser.T__17) {
                this.state = 229;
                this.match(TspFastParser.T__17);
                this.state = 230;
                this.match(TspFastParser.NAME);
                this.state = 235;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
            }
            this.state = 238;
            this._errHandler.sync(this);
            _la = this._input.LA(1);
            if(_la===TspFastParser.T__18) {
                this.state = 236;
                this.match(TspFastParser.T__18);
                this.state = 237;
                this.match(TspFastParser.NAME);
            }

            this.state = 240;
            this.match(TspFastParser.T__19);
            this.state = 254;
            this._errHandler.sync(this);
            switch (this._input.LA(1)) {
            case TspFastParser.NAME:
            	this.state = 241;
            	this.match(TspFastParser.NAME);
            	this.state = 246;
            	this._errHandler.sync(this);
            	var _alt = this._interp.adaptivePredict(this._input,29,this._ctx)
            	while(_alt!=2 && _alt!=antlr4.atn.ATN.INVALID_ALT_NUMBER) {
            	    if(_alt===1) {
            	        this.state = 242;
            	        this.match(TspFastParser.T__1);
            	        this.state = 243;
            	        this.match(TspFastParser.NAME); 
            	    }
            	    this.state = 248;
            	    this._errHandler.sync(this);
            	    _alt = this._interp.adaptivePredict(this._input,29,this._ctx);
            	}

            	this.state = 251;
            	this._errHandler.sync(this);
            	_la = this._input.LA(1);
            	if(_la===TspFastParser.T__1) {
            	    this.state = 249;
            	    this.match(TspFastParser.T__1);
            	    this.state = 250;
            	    this.match(TspFastParser.VARARG);
            	}
